--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1 class="thankyou">Thank You for your RSVP!</h1>
     <p class="thankmessage">Your response has been sent to Emerald and Jaime.</p>
-    <button class="back"><a href="https://jreal1993.github.io/jaime.emerald.wedding/">Back to Wedding Site</a></button>
+    <button class="back"><a href="https://jreal1993.github.io/jaime.emerald.wedding/" class="backlink">Back to Wedding Site</a></button>
 </body>
 </html>
